[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/pickups/bonbon.png" type="Texture" id=1]
[ext_resource path="res://scripts/pickupScripts/bonus.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/pickupsSfx/collectBonus.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/sfxScripts/collectPickupSfx.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/lighting & glow/lightFade.png" type="Texture" id=5]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "flowUpDown"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.1, 2, 2.5 ),
"transitions": PoolRealArray( 0.35, 0.35, 0.35, 0.35, 0.353554, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 4 ), Vector2( 0, -5 ), Vector2( 0, -4 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flowUpDown"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.1, 2, 2.5 ),
"transitions": PoolRealArray( 0.35, 0.35, 0.35, 0.35, 0.353554, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 4 ), Vector2( 0, -5 ), Vector2( 0, -4 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 18.0278

[node name="bonus" type="Area2D" groups=["bonusPickups"]]
script = ExtResource( 2 )

[node name="glowSprite" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.909804, 0.431373, 0.745098 )
scale = Vector2( 0.0629032, 0.0629032 )
texture = ExtResource( 5 )

[node name="animationPlayer" type="AnimationPlayer" parent="glowSprite"]
autoplay = "flowUpDown"
anims/RESET = SubResource( 4 )
anims/flowUpDown = SubResource( 5 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.0919753, 0.0919753 )
texture = ExtResource( 1 )

[node name="animationPlayer" type="AnimationPlayer" parent="sprite"]
autoplay = "flowUpDown"
anims/RESET = SubResource( 2 )
anims/flowUpDown = SubResource( 3 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="collectBonusSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "sfx"
script = ExtResource( 4 )

[node name="selfDestroyTimer" type="Timer" parent="collectBonusSfx"]

[connection signal="body_entered" from="." to="." method="_on_bonus_body_entered"]
[connection signal="timeout" from="collectBonusSfx/selfDestroyTimer" to="collectBonusSfx" method="_on_selfDestroyTimer_timeout"]
